# Alenia-Porter

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_es.md  SECURITY.md  clean_assets.py  compilar_alenia.bat  go.mod  go.sum  install.sh  main.py  porter_launcher.py  porter_logic.py  pyproject.toml  update.sh  updater.py  verify_build.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  pages.yml
.jules/: bolt.md  sentinel.md
cmd/ap/: config.go  i18n.go  main.go  operations.go  theme.go  ui.go  widgets.go
docs/: index.html  install.sh
frontend_v2/: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
frontend_v2/src/: App.tsx  index.css  main.tsx  types.ts
frontend_v2/src/components/: Mascot.tsx  SplitSlider.tsx
locales/: locales.json
src/alenia_porter/: __init__.py  cli.py  gui_web.py  headless.py  media_engine.py  porter.py  updater.py
src/alenia_porter/assets/locales/: locales.json
src/alenia_porter/assets/themes/: default.json  eyecare.json  kaia.json  lavender_mist.json  light.json  mint_spirit.json  zenith_deep.json
src/alenia_porter/zenith/: cli.py
src/alenia_porter/zenith/core/: __init__.py  config.py  engine.py
src/alenia_porter/zenith/hooks/: loader.py
src/alenia_porter/zenith/speculation/: predictor.py
src/alenia_porter/zenith/transformer/: ast_rewriter.py
telemetry-service/: main.py  render.yaml
tests/: test_porter.py  test_updater.py
themes/: default.json  eyecare.json  kaia.json  lavender_mist.json  light.json
zenith/: __init__.py  cli.py
zenith/hooks/: loader.py
