[project]
name = "alenia-porter"
version = "5.7.0"
description = "Python code transformation and analysis tool"
readme = "README.md"
authors = [
    { name = "Alejandro Martinez", email = "alejandrotrrsa9@gmail.com" },
    { name = "Kevin Turcios", email = "turcioskevinr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
porter = "alenia_porter.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["alenia_porter"]

[tool.setuptools.package-data]
alenia_porter = ["py.typed", "zenith/py.typed"]
